@@ -5,6 +5,7 @@
 	* RubyDebuggerProxy.checkConnection() fixed for ruby-debug
 	* propagating RubyDebuggerException to the client (frontend)
 	* fixed NPE during reading a number of added breakpoint
-	* option to synchronize $stderr and $stdout
-	* option to pass additional debugger arguments
+	* ability to synchronize $stderr and $stdout
+	* ability to pass additional debugger options
+	* ability to pass arguments to the debuggee
 
